# transferFile

./: .clangd  .cursorrules  .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  FindMosquitto.cmake  toolchain-openwrt.cmake  write_build_info.cmake
config/: transferFile.gateway.target.json  transferFile.json  transferFile.json.example  transferFile.mqtt-debug.json  transferFile.platform.json
document/: 00-README.md  01-需求说明.md  02-系统架构.md  03-业务流程与状态机.md  04-通信协议.md  05-模块与接口设计.md  06-断点续传设计.md  07-构建与交叉编译.md  08-测试策略.md  09-配置文件说明.md  10-MQTT本机联调.md  11-运行日志.md  12-V0.0.2-验收说明.md  13-项目状态与路线图.md  14-V0.0.3-平台推送.md  15-V0.0.3-验收说明.md  16-技术总结.md  17-V0.0.4-验收说明.md  18-业务时序流程.md  19-项目目录结构与源码说明.md  20-双机联调结果报告.md
include/transfer/: app_config.hpp  base64.hpp  config_loader.hpp  crc32.hpp  error_codes.hpp  file_store.hpp  gateway_mqtt.hpp  mosquitto_mqtt_adapter.hpp  mqtt_adapter.hpp  mqtt_config.hpp  mqtt_publisher.hpp  protocol_codec.hpp  push_mqtt_responder.hpp  push_protocol_codec.hpp  push_receive_orchestrator.hpp  push_session_store.hpp  push_types.hpp  runtime_log.hpp  session_store.hpp  simulated_mqtt_bus.hpp  timeout_watchdog.hpp  transfer_orchestrator.hpp  types.hpp  version.hpp
scripts/: build-mosquitto-cross.sh  build-mosquitto-native.sh  build-native.sh  build-openwrt.sh  debug-mqtt-local.sh  package-target.sh  run-acceptance-tests.sh
src/: main.cpp
src/app/: mqtt_publisher.cpp  push_receive_orchestrator.cpp  runtime_log.cpp  timeout_watchdog.cpp  transfer_orchestrator.cpp
src/config/: app_config.cpp  config_loader.cpp
src/mqtt/: gateway_mqtt_factory.cpp  mosquitto_mqtt_adapter.cpp  mqtt_adapter.cpp  mqtt_config.cpp  simulated_mqtt_bus.cpp
src/protocol/: base64.cpp  crc32.cpp  json_codec.cpp  json_push_codec.cpp
src/session/: memory_push_session_store.cpp  memory_session_store.cpp
src/storage/: file_store.cpp
src/tools/: platform_sim_main.cpp
tests/: CMakeLists.txt  minimal_test.hpp  test_compat.hpp  test_main.cpp
tests/unit/: summon_test_helpers.hpp  test_base64.cpp  test_build_info.cpp  test_config_loader.cpp  test_content_confirm_codec.cpp  test_crc32.cpp  test_file_store.cpp  test_json_codec.cpp  test_mqtt_simulation.cpp  test_orchestrator.cpp  test_orchestrator_v002.cpp  test_orchestrator_v004.cpp  test_push_codec.cpp  test_push_e2e.cpp  test_push_orchestrator.cpp  test_runtime_log.cpp  test_timeout.cpp
